初步完成了treemap和boxplot

--- a/python/people.ipynb
+++ b/python/people.ipynb
@@ -48,6 +48,8 @@
     "    for i in range(len(day)):\n",
     "        yield {\n",
     "            'id': day[i],\n",
+    "            'type': '普通人',\n",
+    "            'isSelected': 0\n",
     "        }"
    ]
   },
@@ -76,16 +78,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_to_json({\n",
-    "    'people': [people for people in init_people()],\n",
-    "    'types': init_types(),\n",
-    "    'relations': [r for r in init_relations()]\n",
-    "})"
+    "save_to_json([people for people in init_people()])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10928"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([people for people in init_people()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
